# automatamain

./: .gitignore  Cargo.toml  README.md  diag.sh  diag2.sh  diag3.sh  diag_devs.sh  filter_config.yaml
dashboard/: Cargo.toml
dashboard/src/: main.rs
deploy/: loggaper.service
migrations/: 0005_learning.sql  0006_bot_trades_entry_meta.sql  0007_bot_trades_entry_at.sql  0008_bot_trades_post_exit.sql  0009_bot_trades_post_exit_granular.sql  0010_dev_blacklist.sql  0011_coin_mcap_tape.sql  0012_creator_stats_indexes.sql  0013_creator_stats_covering_index.sql  0014_dev_blacklist_permanent.sql  0015_bot_trades_wallet_id.sql
scripts/: abort_audit.sh  analyze_exit_funnel.sh  analyze_exit_stats.sh  analyze_journal_v2_throughput.py  analyze_live_gates_logs.sh  analyze_momentum_window.sh  analyze_restart_slice.sh  apply_creator_indexes.sh  audit_wallet_sol.sh  bench_gatekeeper_rpc.sh  build_covering_index.sh  cf_density.sh  cf_discovery.sh  chain_check_cycle.sh  check_fill_mcap_abort_stats.sh  check_jupiter_price_v3_key.sh  check_mint_pnl_remote.sh  check_mints_db.sh  cleanup_legacy_bot_trades.sh  clear_bot_trades_history.sh  clear_wallet2_trade_history.sh  counterfactual_fill_mcap_ratio.sh  creator_explain_middev.sh  creator_stats_explain.sh  creator_stats_profile.sh  deploy_aplus_cont_fixes.sh  deploy_binary_only.sh  deploy_dev_blacklist_permanent.sh  deploy_latency_optimization_prod.sh  deploy_loggaper_remote.sh  deploy_multi_wallet_prod.sh  deploy_preflight.sh  disk_check.sh  drop_old_index.sh  enable_continuation_prod.py  feed_gap.sh  fund_wallet2_from_main.sh  (+25 more)
(+82 files in other folders)
